fixed unupdated form fields in validation and inputs going out of container

--- a/frontend/src/assets/main.css
+++ b/frontend/src/assets/main.css
@@ -79,6 +79,7 @@ a {
 .line {
   display: flex;
   align-items: flex-start;
+  flex-wrap: wrap;
   .p-floatlabel {
     margin-right: 15px;
   }
